--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -2,17 +2,21 @@
     --sidebar-width: 3rem;
     --font-size-base: 1rem;
   }
-  
   .sidebar {
-    width: var(--sidebar-width);
+    width: 50px;
     height: 100vh;
     background-color: #333;
-    color: #fff; 
+    color: white;
     display: flex;
     justify-content: center;
     transition: transform 0.3s ease;
     transform: translateX(0);
   }
+  
+  .form-open .sidebar {
+    transform: translateX(-30%); 
+  }
+  
   
   .sidebar-closed {
     transform: translateX(-100%);
@@ -20,7 +24,14 @@
   
   .plus-icon {
     font-size: 2rem;
-    color: #ff0000; 
+    color: white;
     margin-top: 2rem;
+    transition: 0.5s ease;
+  }
+
+  .plus-icon:hover {
+    cursor: pointer;
+    color: gray;
+    transition: 0.5s ease;
   }
   
