--- a/src/components/FormComponent.module.css
+++ b/src/components/FormComponent.module.css
@@ -28,9 +28,9 @@
 .button {
   width: 100%;
   padding: 12px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
+  background-color: inherit;
+  border: 1px solid white;
+  color: white;
   border-radius: 4px;
   cursor: pointer;
 }
