Edit invoice UI defined

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -19,7 +19,7 @@ main {
 }
 
 .card-wrapper {
-  margin-bottom: 10px; /* Add some margin between cards */
+  margin-bottom: 10px; 
 }
 
 .card-wrapper button {
