--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -35,3 +35,10 @@
     transition: 0.5s ease;
   }
   
+  .sidebar p {
+    position: absolute;
+    bottom: 20px; 
+    color: red;
+    font-size: 2rem;
+    font-weight: bold;
+  }
