Simple Form Validation

--- a/src/components/FormComponent.module.css
+++ b/src/components/FormComponent.module.css
@@ -48,3 +48,14 @@
   margin-right: 2.5px;
   margin-bottom: 0;
 }
+
+
+.form .error {
+  font-size: 1rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  font-style: italic;
+  z-index: -9999999;
+}
