--- a/src/components/FormComponent.module.css
+++ b/src/components/FormComponent.module.css
@@ -13,6 +13,7 @@
   font-weight: bold;
   margin-bottom: 4px;
   color: white;
+  padding-bottom: 10px;
 }
 
 .inputField {
@@ -59,3 +60,4 @@
   font-style: italic;
   z-index: -9999999;
 }
+
