--- a/src/components/FormDataDisplay.module.css
+++ b/src/components/FormDataDisplay.module.css
@@ -1,4 +1,4 @@
-.form-data-display {
+.formDataDisplay {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -10,19 +10,19 @@
     z-index: 2;
   }
   
-  .form-data-content {
+  .formDataContent {
     text-align: center;
   }
   
-  .form-data-content h2 {
+  .formDataContent h2 {
     color: #333;
   }
   
-  .form-data-content pre {
+  .formDataContent pre {
     white-space: pre-wrap;
   }
   
-  .form-data-content button {
+  .formDataContent button {
     margin-top: 10px;
     padding: 8px 16px;
     background-color: #007bff;
