--- a/src/components/FormOverlay.module.css
+++ b/src/components/FormOverlay.module.css
@@ -1,4 +1,4 @@
-.form-overlay {
+.formOverlay {
     position: absolute;
     top: 0;
     left: -100%;
@@ -11,11 +11,11 @@
     z-index: 1;
   }
   
-  .form-overlay.open {
+  .formOverlay.open {
     left: 50px;
   }
   
-  .form-content {
+  .formContent {
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -23,7 +23,7 @@
     position: relative; 
   }
   
-  .close-icon {
+  .closeIcon {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -33,7 +33,7 @@
     transition: 0.5s ease;
   }
 
-  .close-icon:hover {
+  .closeIcon:hover {
     transition: 0.5s ease;
     color: gray;
   }
